# drt

./: AABB.cpp  AABB.h  BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  Intersection.cpp  Intersection.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshBVH.cpp  MeshBVH.h  MeshBVHNode.cpp  MeshBVHNode.h  Object.cpp  Object.h  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneBVH.cpp  SceneBVH.h  SceneBVHNode.cpp  SceneBVHNode.h  gltf.cpp  gltf.h  main.cpp  utils.h
preview/: CMakeLists.txt  Preview.cpp  Preview.h  PreviewLines.cpp  PreviewLines.h  PreviewObject.cpp  PreviewObject.h  PreviewSolid.cpp  PreviewSolid.h
shaders/: phong.frag  phong.vert  simple.frag  simple.vert
